QA Fix that actionbar contents overflow the bottom of the actionbar and are displayed over grey margin.

--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/actionbar.scss
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/actionbar.scss
@@ -7,6 +7,9 @@
 	background:#666;
 	color:#fff;
 	font-size:14px;
+
+	overflow-x:visible;
+	overflow-y:hidden;
 }
 .v-actionbar {width:50px; padding-top:24px;}
 .v-actionbar-open {width:270px; padding-top:0;}
